<resources>
    <string name="app_name">Housify</string>
    <string name="send">Send</string>
    <string name="describe_your_request">Describe your request</string>
    <string name="generate_image">Generate Image</string>
    <string name="edit_image">Edit Image</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"WELCOME"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">Registration failed</string>
    <string name="housify">Housify</string>
    <string name="geniadynamics">GeniaDynamics</string>
    <string name="register">Register</string>
    <string name="signup">Signup</string>
    <string name="pick_birth_date">Pick Birth Date</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="descreva_seu_pedido">Describe your request</string>
    <string name="enviar">Send</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="action_create_account">Create account</string>
    <string name="prompt_subscription_level">Subscription level</string>
    <string name="prompt_birth_date">Birth Date</string>
    <string name="create_account">Create account</string>
    <string name="already_have_account">Already have account?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="optional">(Optional)</string>
    <string name="new_password">(New Password)</string>
    <string name="action_done">(Action Code)</string>
    <string name="action_next">(Action Next)</string>
    <string name="current_password">(Current Password)</string>
    <string name="save">Save</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number_credit_or_debit">Card Number (Credit or Debit)</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv_cvn">CVV/CVN</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="nif">NIF</string>
    <string name="changing_payment_data">Changing Payment Data</string>
    <string name="changing_billing_data">Changing Billing Data</string>
    <string name="add_billing_info">Insert Billing Info</string>
    <string name="to">TO</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="open_camera">Open Camera</string>
    <string name="generate">Generate</string>
    <string name="edit">Edit</string>
    <string name="requesttype">requestType</string>
    <string name="discover">Discover</string>
    <string name="additional_text">Additional Text</string>
    <string name="small_title">Small Title</string>
    <string name="logout">Logout</string>
    <string name="account_management">Account_Management</string>
    <string name="about">About</string>
    <string name="transferir">Download</string>
    <string name="share">Share</string>
</resources>