<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:contentDescription="@string/housify"
        android:layout_centerHorizontal="true"
        android:src="?attr/logo_project"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="28sp"
        android:layout_height="28sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/user_icon" />

    <TextView
        android:id="@+id/userText"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/userIcon"
        android:layout_alignTop="@id/userIcon"
        android:textColor="@color/primary"
        android:text="User's Text" />


    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/imageView"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/additionalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/additional_text" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/additionalText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/small_title" />

</RelativeLayout>
